@@ -93,7 +93,7 @@ view "second" {
 	};
 	zone "example1" {
 		type master;
-		file "yyy";
+		file "zzz";
 		update-policy local;
 		zone-statistics yes;
 	};
