@@ -51,7 +51,7 @@ zone "retransfer" {
 
 zone "retransfer3" {
 	type master;
-	file "retransfer.db";
+	file "retransfer3.db";
 	allow-update { any; };
 	notify no;
 };
